--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.0.0",
     "aws-sdk": "^2.1360.0",
+    "messagebird": "^4.0.1",
     "postmark": "^3.0.19",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
