--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@aws-sdk/client-pinpoint-sms-voice-v2": "^3.347.1",
     "@aws-sdk/client-sesv2": "^3.353.0",
+    "@google-cloud/firestore": "^6.7.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
